--- a/index.html
+++ b/index.html
@@ -6,45 +6,42 @@
 <title>Status leada</title>
 
 <style>
-body { font-family: 'Segoe UI', Roboto, Arial, sans-serif; background:#f7f8fa; margin:0; min-height:100vh; display:flex; justify-content:center; align-items:center; }
-.wrapper { max-width:600px; width:90%; background:#fff; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.05); overflow:hidden; }
-.header { background: linear-gradient(135deg, #00bcd4, #9c27b0); color:#fff; padding:24px; text-align:center; }
-.header img { width:70px; border-radius:16px; display:block; margin:0 auto 10px; }
-.header h2 { margin:0; font-size:22px; }
-.content { padding:26px 30px; }
-.box { background:#f4fbfd; border-left:4px solid #00bcd4; padding:16px 20px; border-radius:6px; margin-bottom:20px; }
-.box.data { background:#f0faff; }
-.box.script { background:#f9f9f9; border:1px dashed #ccc; font-size:14px; color:#555; }
-p { margin:6px 0; font-size:15px; }
-.buttons { text-align:center; margin:30px 0; }
-.buttons a { display:inline-block; margin:6px; padding:12px 20px; border-radius:6px; color:white; text-decoration:none; font-weight:bold; cursor: pointer; }
-.obs { background:#4caf50; } .nie { background:#ff9800; } .odrz { background:#f44336; }
-.footer { background:#f7f8fa; text-align:center; padding:14px; font-size:12px; color:#999; }
-.status-badge { display:inline-block; padding:6px 12px; border-radius:999px; font-weight:700; font-size:14px; color:#fff; }
-.s-nowy { background:#9c27b0; } .s-porzucony { background: #9e9e9e; } .s-nie_odbiera { background:#ff9800; } .s-obsluzony { background:#4caf50; } .s-odrzucony { background:#f44336; }
-.status-row { display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; gap:10px; }
-.muted { font-size:13px; color:#777; }
-.disabled { opacity:.4; pointer-events: none; cursor: default; filter: grayscale(40%); }
-.modal { position: fixed; inset: 0; background: rgba(0,0,0,.45); display: flex; justify-content: center; align-items: center; z-index: 999; }
-.modal.hidden { display: none; pointer-events: none; }
-.modal-box { background: #fff; padding: 22px; border-radius: 12px; width: 90%; max-width: 360px; text-align: center; box-shadow: 0 10px 30px rgba(0,0,0,.15); }
-.modal-actions { display: flex; gap: 10px; margin-top: 20px; }
-.modal-actions button { flex: 1; padding: 10px; border-radius: 6px; border: none; font-weight: bold; cursor: pointer; }
-button.cancel { background: #eee; } button.confirm { background: #4caf50; color: white; }
-body.dashboard-mode { display: block; }
-body.dashboard-mode .wrapper { max-width: 1400px; width: 95%; margin: 20px auto; min-height: auto; }
-.table-scroll { width: 100%; overflow-x: auto; border: 1px solid #eee; border-radius: 8px; }
-.dashboard-table { width: 100%; border-collapse: collapse; font-size: 14px; min-width: 1000px; }
-.dashboard-table thead th { background: #f4f7fb; padding: 12px 10px; text-align: left; font-weight: 700; border-bottom: 2px solid #e3e7ee; cursor: pointer; }
-.dashboard-table tbody td { padding: 12px 10px; border-bottom: 1px solid #eee; }
-.dashboard-toolbar { display: flex; flex-wrap: wrap; gap: 10px; margin-bottom: 15px; align-items: center; }
-.dashboard-toolbar input, .dashboard-toolbar select { padding: 8px; border-radius: 8px; border: 1px solid #ddd; font-size: 14px; }
-@media (max-width: 800px) { .dashboard-toolbar { flex-direction: column; align-items: stretch; } }
-.loader { position: fixed; inset: 0; background: rgba(0,0,0,0.4); display: flex; align-items: center; justify-content: center; z-index: 9999; }
-.loader.hidden { display: none; }
-.loader-box { background: #fff; padding: 30px 40px; border-radius: 12px; text-align: center; box-shadow: 0 10px 30px rgba(0,0,0,.25); }
-.spinner { width: 40px; height: 40px; border: 4px solid #ddd; border-top-color: #333; border-radius: 50%; animation: spin 0.9s linear infinite; margin: 0 auto; }
-@keyframes spin { to { transform: rotate(360deg); } }
+  body { font-family: 'Segoe UI', Roboto, Arial, sans-serif; background:#f7f8fa; margin:0; min-height:100vh; display:flex; justify-content:center; align-items:center; }
+  .wrapper { max-width:600px; width:90%; background:#fff; border-radius:12px; box-shadow:0 4px 10px rgba(0,0,0,0.05); overflow:hidden; }
+  .header { background: linear-gradient(135deg, #00bcd4, #9c27b0); color:#fff; padding:24px; text-align:center; }
+  .header img { width:70px; border-radius:16px; display:block; margin:0 auto 10px; }
+  .header h2 { margin:0; font-size:22px; }
+  .content { padding:26px 30px; }
+  .box { background:#f4fbfd; border-left:4px solid #00bcd4; padding:16px 20px; border-radius:6px; margin-bottom:20px; }
+  .box.data { background:#f0faff; }
+  p { margin:6px 0; font-size:15px; }
+  .buttons { text-align:center; margin:30px 0; }
+  .buttons a { display:inline-block; margin:6px; padding:12px 20px; border-radius:6px; color:white; text-decoration:none; font-weight:bold; cursor: pointer; transition: opacity 0.2s; }
+  .buttons a:hover { opacity: 0.8; }
+  .obs { background:#4caf50; } .nie { background:#ff9800; } .odrz { background:#f44336; }
+  .footer { background:#f7f8fa; text-align:center; padding:14px; font-size:12px; color:#999; }
+  .status-badge { display:inline-block; padding:6px 12px; border-radius:999px; font-weight:700; font-size:14px; color:#fff; }
+  .s-nowy { background:#9c27b0; } .s-porzucony { background: #9e9e9e; } .s-nie_odbiera { background:#ff9800; } .s-obsluzony { background:#4caf50; } .s-odrzucony { background:#f44336; }
+  .status-row { display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; gap:10px; }
+  .muted { font-size:13px; color:#777; }
+  .disabled { opacity:.4; pointer-events: none; cursor: default; }
+  
+  /* DASHBOARD UI */
+  body.dashboard-mode .wrapper { max-width: 1400px; width: 95%; margin: 20px auto; }
+  .dashboard-toolbar { display: flex; flex-wrap: wrap; gap: 10px; margin-bottom: 20px; align-items: center; background: #fff; padding: 15px; border-radius: 8px; border: 1px solid #eee; }
+  .dashboard-toolbar input, .dashboard-toolbar select { padding: 10px; border-radius: 8px; border: 1px solid #ddd; font-size: 14px; outline: none; }
+  .btn-tool { padding: 10px 15px; border-radius: 8px; border: 1px solid #ddd; background: #fff; cursor: pointer; font-weight: 600; display: flex; align-items: center; gap: 5px; }
+  .btn-tool:hover { background: #f9f9f9; border-color: #bbb; }
+  .table-scroll { width: 100%; overflow-x: auto; border: 1px solid #eee; border-radius: 8px; }
+  .dashboard-table { width: 100%; border-collapse: collapse; font-size: 14px; min-width: 1000px; }
+  .dashboard-table thead th { background: #f4f7fb; padding: 12px 10px; text-align: left; border-bottom: 2px solid #e3e7ee; cursor: pointer; }
+  .dashboard-table tbody td { padding: 12px 10px; border-bottom: 1px solid #eee; }
+
+  .loader { position: fixed; inset: 0; background: rgba(0,0,0,0.4); display: flex; align-items: center; justify-content: center; z-index: 9999; }
+  .loader.hidden { display: none; }
+  .loader-box { background: #fff; padding: 30px 40px; border-radius: 12px; text-align: center; }
+  .spinner { width: 40px; height: 40px; border: 4px solid #ddd; border-top-color: #333; border-radius: 50%; animation: spin 0.9s linear infinite; margin: 0 auto; }
+  @keyframes spin { to { transform: rotate(360deg); } }
 </style>
 </head>
 
