--- a/index.html
+++ b/index.html
@@ -388,7 +388,8 @@ function displayTable() {
             <td>${formatDate(r.created)}</td>
             <td>
                 <strong>${r.name || "-"}</strong><br>
-                <small class="muted" style="font-size:12px;">📞 ${formatPhone(r.phone)}</small>
+                <small class="muted" style="font-size:12px;"> ${email}</p></small>
+                <small class="muted" style="font-size:12px;"> ${formatPhone(r.phone)}</small>
             </td>
             <td><span class="status-badge ${statusClass(r.status)}">${r.status}</span></td>
             <td>${formatDate(r.updated)}</td>
