--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
                         <p><strong>🧾 Pacjent:</strong> ${lead.name || "-"}</p>
                         <p><strong>📞 Telefon:</strong> ${formatPhone(lead.phone)}</p>
                         <p><strong>📧 Email:</strong> ${lead.email || "-"}</p>
+                        <p><strong>⏱️ Czas oczekiwania:</strong> ${r.wait_time_combined || "-"}</p>
                         <hr style="border:0; border-top:1px solid #eee; margin:10px 0;">
                         <p><strong>🦷 Cel wizyty:</strong> ${lead.info1 || "-"}</p>
                         <p><strong>📝 Dodatkowe info:</strong> ${lead.info2 || "-"}</p>
