--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <table class="dashboard-table">
                             <thead>
                                 <tr>
-                                    <th>ID</th><th>Data</th><th>Pacjent</th><th>Status</th><th>Zmiana</th><th>Czekał</th><th>Kampania</th>
+                                    <th>ID</th><th>Data</th><th>Pacjent</th><th>Status</th><th>Zmiana</th><th>Czas oczekiwania (Realny)</th><th>Kampania</th>
                                     <th style="text-align:center;">Akcja</th>
                                 </tr>
                             </thead>
@@ -376,7 +376,7 @@
                     <p><strong>🧾 Pacjent:</strong> ${r.name || "-"}</p>
                     <p><strong>📞 Telefon:</strong> ${formatPhone(r.phone)}</p>
                     <p><strong>📧 Email:</strong> ${r.email || "-"}</p>
-                    <p><strong>⏱️ Czas oczekiwania:</strong> ${lead.wait_time_combined || "-"}</p>
+                    <p><strong>⏱️ Czas oczekiwania:</strong> ${r.wait_time_combined || "-"}</p>
                     <hr style="border:0; border-top:1px solid #eee; margin:10px 0;">
                     <p><strong>🦷 Info 1:</strong> ${r.info1 || "-"}</p>
                     <p><strong>📝 Info 2:</strong> ${r.info2 || "-"}</p>
