--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
                 <div class="box data">
                     <p><strong>🧾 Pacjent:</strong> ${r.name}</p>
                     <p><strong>📞 Telefon:</strong> ${formatPhone(r.phone)}</p>
+                    <p style="margin-top:-2px; margin-left:25px;"><small class="muted">✉️ ${r.email || "-"}</small></p>
                     <p><strong>⏱️ Oczekiwanie:</strong> ${r.wait_time_combined}</p>
                     <hr>
                     <p><strong>🦷 Info 1:</strong> ${r.info1 || "-"}</p>
