--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     <p><strong>📞 Telefon:</strong> ${formatPhone(r.phone)}</p>
                     <p><strong>✉️ ${r.email || "-"}</strong></p>
                     <p><strong>⏱️ Oczekiwanie:</strong> ${r.wait_time_combined}</p>
-                    <hr>
+                    <hr style="border:0; border-top:1px solid #eee; margin:10px 0;">
                     <p><strong>🦷 Info 1:</strong> ${r.info1 || "-"}</p>
                     <p><strong>📝 Info 2:</strong> ${r.info2 || "-"}</p>
                 </div>`;
