--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             document.getElementById("previewContent").innerHTML = `
                 <div class="box">
                     <p>🆔 <strong>ID:</strong> ${r.id}</p>
-                    <p>📅 <strong>Zgłoszenie:</strong> ${r.created}</p>
+                    <p>📅 <strong>Zgłoszenie:</strong> ${${formatDate(r.created)}</p>
                     <p>📢 <strong>Kampania:</strong> ${r.campaign || "-"}</p>
                 </div>
                 <div class="box data">
