--- a/index.html
+++ b/index.html
@@ -340,6 +340,10 @@
                     <hr style="border:0; border-top:1px solid #eee; margin:10px 0;">
                     <p><strong>🦷 Info 1:</strong> ${r.info1 || "-"}</p>
                     <p><strong>📝 Info 2:</strong> ${r.info2 || "-"}</p>
+                </div>
+                <div style="text-align:right">
+                    <span class="status-badge ${statusClass(r.statusKey)}">${r.status}</span>
+                    <div class="muted" style="margin-top:5px">Aktualizacja:<br>${formatDate(r.lastUpdate)}</div>
                 </div>`;
             document.getElementById("previewModal").classList.remove("hidden");
         }
