--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <p><strong>🧾 Pacjent:</strong> ${lead.name || "-"}</p>
                         <p><strong>📞 Telefon:</strong> ${formatPhone(lead.phone)}</p>
                         <p><strong>✉️ Email:</strong> ${lead.email || "-"}</p>
-                        <p><strong>⏱️ e:</strong> ${lead.wait_time_combined || "-"}</p>
+                        <p><strong>⏱️ Czas kontaktu (realny):</strong> ${lead.wait_time_combined || "-"}</p>
                         <hr style="border:0; border-top:1px solid #eee; margin:10px 0;">
                         <p><strong>🦷 Cel:</strong> ${lead.info1 || "-"}</p>
                         <p><strong>📝 Info:</strong> ${lead.info2 || "-"}</p>
