--- a/index.html
+++ b/index.html
@@ -402,6 +402,10 @@
          p { font-size: 13px; }
          .lead-card { padding: 12px; }
       }
+
+      .modal-preview-box .content {
+         text-align: left;
+      }
    </style>
 </head>
 <body>
