--- a/index.html
+++ b/index.html
@@ -403,8 +403,9 @@
          .lead-card { padding: 12px; }
       }
 
-      .modal-preview-box .content {
-         text-align: left;
+      #previewContent,
+      #previewContent p {
+          text-align: left;
       }
    </style>
 </head>
