--- a/index.html
+++ b/index.html
@@ -407,6 +407,11 @@
       #previewContent p {
           text-align: left;
       }
+
+      .modal-preview-box .btn-back {
+          top: 50%;
+          left: 12px;
+      }
    </style>
 </head>
 <body>
@@ -438,13 +443,12 @@
    <div id="previewModal" class="loader hidden" onclick="closePreview(event)">
       <div class="loader-box modal-preview-box" onclick="event.stopPropagation()">
          <div class="header">
-            <div class="modal-close-x" onclick="closePreview()">×</div>
+            <button class="btn-back" onclick="closePreview()">
+               <span>Powrót</span>
+            </button>
             <h2>Szczegóły leada</h2>
          </div>
          <div class="content" id="previewContent"></div>
-         <div style="background: #f9f9f9; padding: 15px; text-align: center;">
-            <button class="btn-modal close-btn" onclick="closePreview()">Zamknij</button>
-         </div>
       </div>
    </div>
    
